fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@
 * {}
 
 body {
+    font-family: "Untitled";
 }
 
 .intro {
@@ -27,8 +28,7 @@ body {
     font-size: 18px;
 }
 
-.subtitle {
-    font-family: "Untitled";
+.subtitle, p {
     padding-left: 20px;
     padding-right: 20px;
     line-height: 1.5;
@@ -45,4 +45,16 @@ a {
     color : #f44336;
     text-decoration: none;
     cursor: pointer;
+}
+
+p {
+    text-indent: 30px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.text {
+    max-width: 600px;
 }
